[Add] Add components that make up the page.

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,1 +1,27 @@
+:host {
+  .page-content {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 200px 2fr 1fr;
+    grid-template-rows: 100px auto;
 
+    .header {
+      grid-column: 1/4;
+      grid-row: 1/2;
+    }
+    .menu {
+      grid-column: 1/2;
+      grid-row: 2/3;
+    }
+    .main {
+      grid-column: 2/3;
+      grid-row: 2/3;
+    }
+    .sub {
+      grid-column: 3/4;
+      grid-row: 2/3;
+    }
+
+  }
+}
