[Update] ・Update page structure

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,4 +1,5 @@
 <div class="page-content">
+  <div class="logo">logo</div>
   <app-header class="header"></app-header>
   <app-menu class="menu"></app-menu>
   <app-main-content class="main"></app-main-content>
