--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,26 +1,39 @@
 :host {
   .page-content {
-    width: 100%;
-    height: 100%;
+    width: calc(100% - 10px);
+    height: calc(100% - 10px);
     display: grid;
-    grid-template-columns: 200px 2fr 1fr;
-    grid-template-rows: 100px auto;
+    grid-template-columns: 150px 50px 2fr 1fr;
+    grid-template-rows: 150px 50px auto;
+    .logo {
+      grid-column: 1/3;
+      grid-row: 1/3;
+      z-index: 1;
+      border-radius: 150px;
+      background-color: #5f5f5f;
+      padding: 5px;
+    }
 
     .header {
-      grid-column: 1/4;
+      grid-column: 3/5;
       grid-row: 1/2;
+      padding: 5px;
     }
     .menu {
       grid-column: 1/2;
-      grid-row: 2/3;
+      grid-row: 3/4;
+      padding: 5px;
     }
     .main {
-      grid-column: 2/3;
-      grid-row: 2/3;
+      z-index: 0;
+      grid-column: 2/4;
+      grid-row: 2/4;
+      padding: 5px;
     }
     .sub {
-      grid-column: 3/4;
-      grid-row: 2/3;
+      grid-column: 4/5;
+      grid-row: 2/4;
+      padding: 5px;
     }
 
   }
