--- a/src/app/pages/home.page.scss
+++ b/src/app/pages/home.page.scss
@@ -9,9 +9,22 @@
       grid-column: 1/3;
       grid-row: 1/3;
       z-index: 1;
+      margin-top: -45px;
+      margin-left: -45px;
       border-radius: 150px;
       background-color: #5f5f5f;
       padding: 5px;
+      background-image: url("../../assets/logo.png");
+      background-position: center center;
+      background-repeat: no-repeat;
+      background-size: contain;
+      // transform:rotate(-35deg)
+      animation: r4 60s steps(60) infinite;
+    }
+
+    @keyframes r4 {
+      0%   { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
     }
 
     .header {
